# ros2_whill

./: CMakeLists.txt  README.md  package.xml
launch/: ignition_gazebo.launch.py  parent_bringup.launch.py  robot_description.launch.py  spawn_robot.launch.py  whill_gazebo.launch.py
urdf/: robot_top.urdf.xacro  robot_top.urdf.xacro.bak_20250825_162110
urdf/body/: whill_model_cr2.urdf.xacro.bak
urdf/lider/: lider.urdf.xacro
whill/: package.xml
whill_bringup/: setup.py
whill_bringup/launch/: whill_launch.py
whill_description/: CMakeLists.txt  README.md  package.xml  whill_model_cr2.urdf
whill_description/launch/: controllers.launch.py  parent_bringup.launch.py  robot_description.launch.py  spawn_robot.launch.py
whill_description/urdf/: robot_top.urdf.xacro.bak_20250825_171408  whill_model_cr2.urdf
whill_description/urdf/body/: whill_model_cr2.sdf  whill_model_cr2.sdf.bak  whill_model_cr2.urdf  whill_model_cr2.urdf.xacro
whill_description/urdf/lider/: lider.urdf.xacro  lider.urdf.xacro.bak  lider.urdf.xacro.bak_20250825_155100
whill_driver/: CMakeLists.txt  README.md
whill_driver/include/whill_driver/: whill_node.hpp
whill_driver/include/whill_driver/model_cr2/: whill.hpp
whill_driver/src/: whill_node.cpp
whill_driver/src/model_cr2/: whill.cpp
whill_examples/: setup.py
whill_examples/launch/: whill_examples_launch.py
