<?xml version="1.0"?>
<package format="3">
  <name>whill_description</name>
  <version>0.0.0</version>
  <description>WHILL robot description package</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- runtime / launch deps -->
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>controller_manager</depend>
  <depend>ros_gz_sim</depend>
  <depend>gazebo_ros</depend>
</package>
